Code editor: Fix text overflow for problem panel Code editor: Do not update problem if panel is not open or shown

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -194,6 +194,10 @@ body {
     background: white;
 }
 
+.problem-display .datagrid-cell-parent {
+    overflow: initial;
+}
+
 .output-tab {
     display: inline-block;
     height: 22px;
